tests/invalid/while.ar
fn main() {
    var i = 1;
    while i != 0 {
        0
    }
}

//! 4:9: error: this block cannot return a value
